# ai-secretary

./: .env.example  .gitignore  README.md  SPEC.md  pyproject.toml  youtube_analysis_dump.md
.opencode/plans/: agent-critic.md  agent-prompt.md  agent-writer.md  capability-test.md  spec-template.md  workflow.md
.opencode/plans/examples/: good-spec.md
agents/: CURRENT_TASK.md  DECISIONS.md  README.md
agents/RESEARCH/: index.md
docs/research/: chinese-ai-for-russia.md  free-llm-apis-2026.md  youtube-summarizers-research.md
obsidian-plugin/: README.md  build.mjs  main.ts  manifest.json  package.json
src/secretary/: __init__.py  ai_router.py  api.py  config.py  database.py  enums.py  material_manager.py  models.py  obsidian.py  video_analyzer.py
src/secretary/cli/: __init__.py  main.py
