[project]
name = "secretary"
version = "0.1.0"
description = "AI Secretary for Obsidian knowledge base management"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "User"}]
keywords = ["obsidian", "knowledge-base", "ai", "learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "chromadb>=0.4.22",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "python-dotenv>=1.0.0",
    "yt-dlp>=2024.0.0",
    "youtube-transcript-api>=0.6.2",
    "brotab>=1.1.0",
    "browser-history>=0.5.0",
    "click>=8.1.0",
    "tenacity>=8.2.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.scripts]
secretary = "secretary.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
